--- a/Html/index.html
+++ b/Html/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js Dom</title>
+    <!-- Css link up -->
+     <link rel="stylesheet" href="style.css">
+    <!-- Tailwind + daisy ui cdn -->
+      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+     
+ 
 </head>
 <body>
 
 
-<h1>Hi js dom code here:</h1>
 
+<h1 class="text-2xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis velit officia ex cum ipsa animi harum minus magni esse vitae dolor aspernatur mollitia est natus, tempore voluptatum aut dolorum rem!</h1>
 
 
 
