--- a/Html/index.html
+++ b/Html/index.html
@@ -7,16 +7,25 @@
     <!-- Css link up -->
      <link rel="stylesheet" href="style.css">
     <!-- Tailwind + daisy ui cdn -->
+      <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
      
  
 </head>
 <body>
 
+<!-- card code here: -->
 
-
-<h1 class="text-2xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis velit officia ex cum ipsa animi harum minus magni esse vitae dolor aspernatur mollitia est natus, tempore voluptatum aut dolorum rem!</h1>
-
+<div class="container w-[500px] h-screen mt-28 mx-auto border-2 border-red-300 text-center">
+ <input id="inputFeild" type="text" placeholder="Type Any Text:-" class="input input-accent" />
+ <div class="btn mt-24 grid grid-cols-2 gap-10">
+  <button class="btn btn-dash btn-accent ">Accent</button>
+  <button class="btn btn-soft btn-success ">Success</button>
+  <button class="btn btn-dash btn-accent ">Accent</button>
+  <button class="btn btn-soft btn-success ">Success</button>
+ </div>
+ 
+</div>
 
 
 
