--- a/Html/index.html
+++ b/Html/index.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js Dom</title>
-    <!-- Css link up -->
-     <link rel="stylesheet" href="style.css">
-    <!-- Tailwind + daisy ui cdn -->
-      <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
-      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-     
- 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Js Dom</title>
+  <!-- Css link up -->
+  <link rel="stylesheet" href="style.css">
+  <!-- Tailwind + daisy ui cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+
 </head>
+
 <body>
 
-<!-- card code here: -->
+  <!-- card code here: -->
 
-<div class="container w-[500px] h-screen mt-28 mx-auto border-2 border-red-300 text-center">
- <input id="inputFeild" type="text" placeholder="Type Any Text:-" class="input input-accent" />
- <div class="btn mt-24 grid grid-cols-2 gap-10">
-  <button class="btn btn-dash btn-accent ">Accent</button>
-  <button class="btn btn-soft btn-success ">Success</button>
-  <button class="btn btn-dash btn-accent ">Accent</button>
-  <button class="btn btn-soft btn-success ">Success</button>
- </div>
- 
-</div>
+  <div class="container w-[500px] h-screen mt-28 mx-auto border-2 border-red-300 text-center">
+    <input id="inputFeild" type="text" placeholder="Type Any Text:-" class="input input-accent" />
 
+    <div class="btn mt-24 grid grid-cols-2 gap-10">
 
+      <button id="addItems" class="btn btn-dash btn-accent ">AddItems</button>
+      <button id="removeItems" class="btn btn-soft btn-success ">RemoveItems</button>
+      <button id="upDateItems" class="btn btn-dash btn-accent ">
+        <Ul></Ul>UpDateItems
+      </button>
+      <button id="changeStyle" class="btn btn-soft btn-success ">ChangeStyle</button>
 
-<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit dolores, expedita eius eaque laudantium optio magni voluptatum, nulla minima eum dicta doloribus. Itaque placeat officiis molestiae deserunt. Nemo, illum tempore.</h1>
+    </div>
 
-
-
+  </div>
 
 
 
 
-<script src="/Js/script.js"></script> 
+
+
+<h1>This is tour of dom</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, ullam.</p>
+
+
+
+  <script src="/Js/script.js"></script>
 </body>
+
 </html>
